tests/NormalTests/paczka1/small_fuzzy/16613612.err
Error in line 4: 8EkF S161 64,3
Error in line 11: FKJ6JiVWl S161 42,8
Error in line 14: FKJ6JiVWl S850 87,4
